tests/errors/arguments/labels/var_as_label.src
.IPPcode18
jump GF@var